# hypotheek-studieschuld

./: .gitignore  README.md  annuïteitentabel.csv  dashboard.py  financieringslasttabellen.csv  hypotheek.py  hypotheek_opties.py  pyproject.toml  run.sh  studieschuld.py
